test/failed-3/secret/type-reconstruction/ill-typed/exceptions/exceptions-5.stella
// ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION

language core;

extend with #panic, #type-reconstruction;

fn main(a : Bool) -> auto {
  return panic!(Nat::iszero(a))
}
